// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrayerRequest gets all prayers from current person 1`] = `
Object {
  "data": Object {
    "getCurrentPersonPrayerRequests": Array [
      Object {
        "campusId": 16,
        "categoryId": 2,
        "createdByPersonAliasId": 447217,
        "firstName": "Isaac",
        "flagCount": 0,
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "lastName": "Hardy",
        "prayerCount": 4,
        "text": "Pray this works.",
      },
    ],
  },
}
`;

exports[`PrayerRequest gets all prayers from current person 2`] = `
Array [
  Array [
    "PrayerRequests/Public?%24filter=CreatedByPersonAliasId%20eq%20123",
    Object {},
    Object {},
  ],
]
`;

exports[`PrayerRequest gets all public prayer requests 1`] = `
Object {
  "data": Object {
    "getPublicPrayerRequests": Array [
      Object {
        "campusId": 16,
        "categoryId": 2,
        "createdByPersonAliasId": 447217,
        "firstName": "Isaac",
        "flagCount": 0,
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "lastName": "Hardy",
        "prayerCount": 4,
        "text": "Pray this works.",
      },
      Object {
        "campusId": 16,
        "categoryId": 2,
        "createdByPersonAliasId": 447217,
        "firstName": "Rich",
        "flagCount": 0,
        "id": "PrayerRequest:04fbd6bf8d5ee1a6493f42615e65ea05bb9ce2844192b00af611268daee3297d6e00b42b4ceebbb632956536f1cb00f3",
        "lastName": "Dubee",
        "prayerCount": 4,
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest gets all public prayer requests 2`] = `
Array [
  Array [
    "PrayerRequests/Public",
    Object {},
    Object {},
  ],
]
`;

exports[`PrayerRequest gets all public prayer requests by campus 1`] = `
Object {
  "data": Object {
    "getPublicPrayerRequestsByCampus": Array [
      Object {
        "campusId": 16,
        "categoryId": 2,
        "createdByPersonAliasId": 447217,
        "firstName": "Isaac",
        "flagCount": 0,
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "lastName": "Hardy",
        "prayerCount": 4,
        "text": "Pray this works.",
      },
    ],
  },
}
`;

exports[`PrayerRequest gets all public prayer requests by campus 2`] = `
Array [
  Array [
    "PrayerRequests/Public?%24filter=CampusId%20eq%2016",
    Object {},
    Object {},
  ],
]
`;

exports[`PrayerRequest gets prayer request by id 1`] = `
Object {
  "data": Object {
    "node": Object {
      "__typename": "PrayerRequest",
      "campusId": 16,
      "categoryId": 2,
      "createdByPersonAliasId": 447217,
      "firstName": "Isaac",
      "flagCount": 0,
      "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
      "lastName": "Hardy",
      "prayerCount": 4,
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest gets prayer request by id 2`] = `
Array [
  Array [
    "PrayerRequests/10",
    Object {},
    Object {},
  ],
]
`;
